--- a/L2_research_write_article.ipynb
+++ b/L2_research_write_article.ipynb
@@ -330,7 +330,7 @@
     "crew = Crew(\n",
     "    agents=[planner, writer, editor],\n",
     "    tasks=[plan, write, edit],\n",
-    "    verbose=2\n",
+    "    verbose=True\n",
     ")"
    ]
   },
